<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>Patient_00</class>
 <widget class="QWizardPage" name="Patient_00">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>688</width>
    <height>481</height>
   </rect>
  </property>
  <layout class="QFormLayout" name="formLayout">
   <item row="0" column="1">
    <layout class="QHBoxLayout" name="horizontalLayout_4">
     <item>
      <widget class="QLineEdit" name="mrNumberField">
       <property name="minimumSize">
        <size>
         <width>150</width>
         <height>0</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>150</width>
         <height>16777215</height>
        </size>
       </property>
       <property name="toolTip">
        <string comment="ALLSCRIPTS ID EDIT TOOLTIP">ALLSCRIPTS ID</string>
       </property>
       <property name="maxLength">
        <number>10</number>
       </property>
      </widget>
     </item>
     <item>
      <spacer name="horizontalSpacer_4">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>40</width>
         <height>20</height>
        </size>
       </property>
      </spacer>
     </item>
    </layout>
   </item>
   <item row="0" column="0">
    <widget class="QLabel" name="mrNumberLabel">
     <property name="toolTip">
      <string comment="ALLSCRIPTS ID EDIT TOOLTIP">ALLSCRIPTS ID</string>
     </property>
     <property name="text">
      <string comment="ALLSCRIPTS ID EDIT LABEL">ALLSCRIPTS ID</string>
     </property>
    </widget>
   </item>
   <item row="1" column="0">
    <widget class="QLabel" name="lastLabel">
     <property name="toolTip">
      <string comment="PATIENT LAST EDIT TOOLTIP">PATIENT LAST</string>
     </property>
     <property name="text">
      <string comment="PATIENT LAST EDIT LABEL">PATIENT LAST</string>
     </property>
    </widget>
   </item>
   <item row="1" column="1">
    <layout class="QHBoxLayout" name="horizontalLayout_2">
     <item>
      <widget class="QLineEdit" name="lastField">
       <property name="minimumSize">
        <size>
         <width>150</width>
         <height>0</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>150</width>
         <height>16777215</height>
        </size>
       </property>
       <property name="toolTip">
        <string comment="PATIENT LAST EDIT TOOLTIP">PATIENT LAST</string>
       </property>
       <property name="maxLength">
        <number>64</number>
       </property>
      </widget>
     </item>
     <item>
      <spacer name="horizontalSpacer_2">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>40</width>
         <height>20</height>
        </size>
       </property>
      </spacer>
     </item>
    </layout>
   </item>
   <item row="2" column="1">
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
      <widget class="QLineEdit" name="firstField">
       <property name="minimumSize">
        <size>
         <width>150</width>
         <height>0</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>150</width>
         <height>16777215</height>
        </size>
       </property>
       <property name="toolTip">
        <string comment="PATIENT FIRST EDIT TOOLTIP">PATIENT FIRST</string>
       </property>
       <property name="maxLength">
        <number>64</number>
       </property>
      </widget>
     </item>
     <item>
      <spacer name="horizontalSpacer">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>40</width>
         <height>20</height>
        </size>
       </property>
      </spacer>
     </item>
    </layout>
   </item>
   <item row="2" column="0">
    <widget class="QLabel" name="firstLabel">
     <property name="toolTip">
      <string comment="PATIENT FIRST EDIT TOOLTIP">PATIENT FIRST</string>
     </property>
     <property name="text">
      <string comment="PATIENT FIRST EDIT LABEL">PATIENT FIRST</string>
     </property>
    </widget>
   </item>
   <item row="3" column="1">
    <layout class="QHBoxLayout" name="horizontalLayout_3">
     <item>
      <widget class="QDateEdit" name="dobField">
       <property name="toolTip">
        <string comment="DOB EDIT TOOLTIP">DOB</string>
       </property>
       <property name="calendarPopup">
        <bool>true</bool>
       </property>
      </widget>
     </item>
     <item>
      <spacer name="horizontalSpacer_3">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>40</width>
         <height>20</height>
        </size>
       </property>
      </spacer>
     </item>
    </layout>
   </item>
   <item row="3" column="0">
    <widget class="QLabel" name="dobLabel">
     <property name="toolTip">
      <string comment="DOB EDIT TOOLTIP">DOB</string>
     </property>
     <property name="text">
      <string comment="DOB EDIT LABEL">DOB</string>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <tabstops>
  <tabstop>mrNumberField</tabstop>
  <tabstop>lastField</tabstop>
  <tabstop>firstField</tabstop>
  <tabstop>dobField</tabstop>
 </tabstops>
 <resources/>
 <connections/>
</ui>
